2007-04-24  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/PlayerInterface.cs: Use RatingMenuItem instead of
	the submenus which are clunky and ugly

	* src/Core/Banshee.Widgets/ComplexMenuItem.cs: A special MenuItem that
	allows widgets to be embedded and connected to a proper theme expose
	handler, also enables keyboard events to be passed to the menu item

	* src/Core/Banshee.Widgets/RatingMenuItem.cs: A ComplexMenuItem that
	embeds the RatingEntry in it to allow inline track rating from menus;
	with the item selected, it accepts input via the mouse with clicking
	or dragging, the scroll wheel, or the keyboard

	* src/Core/Banshee.Widgets/RatingEntry.cs: Drawing related changes to
	allow the widget to be embedded in other widgets and fit in, but also
	work properly as a standalone 'entry'; fix drag-rating in the standalone
	event handlers

	* src/Core/Banshee.Base/ActionManager.cs:
	* data/UIManagerLayout.xml: Remove RatingAction as it was never a real
	action and acted only as a visible placeholder

2007-04-23  Aaron Bockover  <abock@gnome.org>

	* src/Plugins/Banshee.Plugins.Recommendation/RecommendationPane.cs: 
	Load generic-artist.png in place of the artist photo if there's a problem
	loading the artist photo from last.fm (BGO #432200); cosmetic string
	changes; round the similarity value to the nearest whole percentage;
	introduce a cache wipe/versioning system to allow the cache to be wiped
	if the code to parse it changes later on (see NOTE in code) - everyone
	will start out with a clean cache after this update at version 2

	* src/Plugins/Banshee.Plugins.Recommendation/RecommendationPlugin.cs:
	Added schema for cache_version
	
	* src/Plugins/Banshee.Plugins.Recommendation/generic-artist.png: Added
	a musician to display if an artist photo cannot be loaded from last.fm

2007-04-18  Aaron Bockover  <abock@gnome.org>

	* src/Plugins/Banshee.Plugins.Daap/DaapCore.cs: Share local playlists
	over DAAP (BGO #407672, Daniel Munckton)
